; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_common.c_bootloader_common_check_chip_validity.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_common.c_bootloader_common_check_chip_validity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@ESP_OK = common dso_local global i32 0, align 4
@CONFIG_IDF_FIRMWARE_CHIP_ID = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"mismatch chip ID, expected %d, found %d\00", align 1
@ESP_FAIL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [56 x i8] c"can't run on lower chip revision, expected %d, found %d\00", align 1
@.str.2 = private unnamed_addr constant [45 x i8] c"chip revision: %d, min. %s chip revision: %d\00", align 1
@ESP_IMAGE_BOOTLOADER = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [11 x i8] c"bootloader\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"application\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bootloader_common_check_chip_validity(%struct.TYPE_3__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i32, i32* @ESP_OK, align 4
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* @CONFIG_IDF_FIRMWARE_CHIP_ID, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %10, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %2
  %16 = load i32, i32* @TAG, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ESP_LOGE(i32 %16, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %20)
  %22 = load i32, i32* @ESP_FAIL, align 4
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %15, %2
  %24 = call i32 (...) @bootloader_common_get_chip_revision()
  store i32 %24, i32* %7, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = icmp slt i32 %25, %28
  br i1 %29, label %30, label %38

30:                                               ; preds = %23
  %31 = load i32, i32* @TAG, align 4
  %32 = load i32, i32* %7, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @ESP_LOGE(i32 %31, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0), i32 %32, i32 %35)
  %37 = load i32, i32* @ESP_FAIL, align 4
  store i32 %37, i32* %5, align 4
  br label %57

38:                                               ; preds = %23
  %39 = load i32, i32* %7, align 4
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = icmp ne i32 %39, %42
  br i1 %43, label %44, label %56

44:                                               ; preds = %38
  %45 = load i32, i32* @TAG, align 4
  %46 = load i32, i32* %7, align 4
  %47 = load i64, i64* %4, align 8
  %48 = load i64, i64* @ESP_IMAGE_BOOTLOADER, align 8
  %49 = icmp eq i64 %47, %48
  %50 = zext i1 %49 to i64
  %51 = select i1 %49, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0)
  %52 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %53 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 4
  %55 = call i32 @ESP_LOGI(i32 %45, i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.2, i64 0, i64 0), i32 %46, i8* %51, i32 %54)
  br label %56

56:                                               ; preds = %44, %38
  br label %57

57:                                               ; preds = %56, %30
  %58 = load i32, i32* %5, align 4
  ret i32 %58
}

declare dso_local i32 @ESP_LOGE(i32, i8*, i32, i32) #1

declare dso_local i32 @bootloader_common_get_chip_revision(...) #1

declare dso_local i32 @ESP_LOGI(i32, i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
